packages/survey-creator-core/src/components/question.scss
/* ... */
.sd-panel .svc-row--ghost.svc-row--ghost .svc-question__content.svc-question__content {
  border: none;
}

.svc-widget__content {
  width: 100%;

  .sd-question__content {
    pointer-events: none;
  }
}

.svc-question__content {
  .sd-paneldynamic__footer,
  .sd-paneldynamic__separator {
    display: none;
  }
}

.svc-panel__placeholder_frame-wrapper {
  container-type: inline-size;
  width: 100%;
  display: flex;
  flex-grow: 1;
  box-sizing: border-box;
  position: relative;
}

.svc-question__content--empty-template {
  .sd-question--paneldynamic,
  .sd-question__content,
  sv-ng-paneldynamic-question,
  .sd-paneldynamic,
  .sd-paneldynamic__panels-container,
  .sd-paneldynamic__panel-wrapper,
  .svc-question__adorner,
  .svc-question__adorner > div {
    display: flex;
    flex-direction: column;
    flex-grow: 1;

    .svc-panel__placeholder_frame {
      flex-grow: 1;
    }
  }
}

.sd-paneldynamic__panels-container {
  padding-bottom: 2px;
  margin-bottom: -2px;
}

.svc-panel__placeholder_frame {
  border: var(--sjs2-border-width-x100, 1px) dashed var(--sjs2-color-border-basic-secondary);
  width: 100%;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: var(--sjs2-spacing-x800, 64px) var(--sjs2-spacing-x800, 64px) var(--sjs2-spacing-x600, 48px)
    var(--sjs2-spacing-x800, 64px);
  flex-grow: 1;
}

.svc-panel__add-new-question-container {
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
  margin-top: var(--sjs2-spacing-x050, 4px);
}

.svc-panel__question-type-selector {
  position: absolute;
  inset-inline-end: 0;
  bottom: 0;
  margin: 0;
}

@container (max-width: #{$sd-panel-normal-min-width}) {
  .svc-panel__placeholder_frame {
    padding: calc(var(--sjs2-base-unit-spacing) * 11) var(--sjs2-spacing-x300, 24px)
      calc(var(--sjs2-base-unit-spacing) * 10);
  }
}

@container (max-width: #{$sd-panel-medium-min-width}) {
  .svc-panel__placeholder {
    display: none;
  }

  .svc-panel__placeholder_frame {
    padding: calc(var(--sjs2-base-unit-spacing) * 10) var(--sjs2-spacing-x300, 24px)
      calc(var(--sjs2-base-unit-spacing) * 10);
  }
}

.sd-panel {
  .svc-row {
    margin-top: var(--sjs2-spacing-x100, 8px);
  }

  .svc-row:first-of-type {
    margin-top: 0;
  }

  .svc-row .sd-row {
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
  }
}

.svc-question__content.svc-question__content--collapsed {
  .sd-element--complex > .sd-element__header--location-top {
    &.svc-element__header--hidden {
      padding: 0;
    }
  }
}

.svc-question__content:not(.svc-question__content--composite-question) {
  .sd-element--complex > .sd-element__header--location-top {
    padding-bottom: calc(0.5 * var(--sd-base-vertical-padding));
    padding-top: 0;
  }

  .sd-panel__content {
    gap: 0;
    padding-top: 0;
  }
}

.svc-question__content {
  .sd-element--complex > .sd-element__header--location-top {
    &.svc-element__header--hidden {
      padding-bottom: var(--sjs2-spacing-x100, 8px);
    }

    &:after {
      display: none;
    }
  }

  .sd-table__cell--detail-panel .sd-panel__content {
    padding-top: var(--sjs2-spacing-x100, 8px);
  }

  .sd-paneldynamic__panel-wrapper {
    padding: 0;
  }

  // .sd-table__cell--actions {
  //   .sv-action-bar-item:disabled {
  //     background: $background;
  //     opacity: var(--sjs2-opacity-visible);

  //     use {
  //       fill: $foreground-light;
  //     }
  //   }
  // }

  .sd-table__row-disabled > .sd-table__cell {
    opacity: var(--sjs2-opacity-visible);
  }
}

.svc-question__content:not(.svc-question__content--composite-question) {
  .svc-carry-forward-panel {
    margin-top: var(--sjs2-spacing-x200, 16px);
  }

  .sd-question__content {
    min-width: min(var(--sjs2-size-x800), 100%);
    margin-left: var(--sjs2-spacing-negative-x500, -40px);
    margin-right: var(--sjs2-spacing-negative-x500, -40px);
    padding-left: var(--sjs2-spacing-x500, 40px);
    padding-right: var(--sjs2-spacing-x500, 40px);
    overflow-x: auto;
  }

  .sd-question--description-under-input .sd-question__content {
    margin-bottom: var(--sjs2-spacing-negative-x100, -8px);
    padding-bottom: var(--sjs2-spacing-x100, 8px);
  }

  .sd-composite {
    .sd-question__content {
      margin-left: 0;
      margin-right: 0;
      padding-left: 0;
      padding-right: 0;
    }
  }
}

.svc-question__content--paneldynamic {
  .sd-question__content {
    padding-bottom: 2px;
    margin-bottom: -2px;
    padding-top: var(--sjs2-spacing-x100, 8px);
    margin-top: var(--sjs2-spacing-negative-x100, -8px);
  }

  .sd-paneldynamic__panels-container {
    padding-top: var(--sjs2-spacing-x100, 8px);
    margin-top: var(--sjs2-spacing-negative-x100, -8px);
  }
}

.svc-question__adorner {
  .sv-ranking:not(.sv-ranking--select-to-rank) {
    .svc-question__content--ranking {
      .svc-carry-forward-panel {
        margin-top: 0;
      }
    }
  }

  .sv-ranking {
    .sv-ranking__container-placeholder {
      padding-top: var(--sjs2-spacing-x200, 16px);
      padding-bottom: var(--sjs2-spacing-x200, 16px);
    }
  }

  .sv-ranking--select-to-rank-vertical {
    .sv-ranking__container--empty {
      padding-top: 0;
      padding-bottom: 0;
    }

    .sv-ranking__container--from {
      .sv-ranking__container-placeholder {
        padding-bottom: var(--sjs2-spacing-x300, 24px);
      }
    }
  }
}

.svc-question__top-actions {
  padding: var(--sjs2-spacing-x050, 4px);
  position: absolute;
  top: 0;
  right: 0;
  visibility: hidden;
}

.svc-question__adorner--collapse-onhover.svc-hovered > .svc-question__content,
.svc-question__adorner--collapse-onhover > .svc-question__content--selected,
.svc-question__adorner--collapse-always > .svc-question__content {
  & > .svc-question__drag-area > .svc-question__top-actions {
    visibility: visible;
  }
}
/* ... */

